--- a/contact.html
+++ b/contact.html
@@ -1,138 +1,276 @@
 <!doctype html>
+
 <html>
+
 <title>Tarud Design - Contact</title>
-  <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
+<link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="/ft.css">
+
+<link rel="stylesheet" href="/ft_black.css">
+
+<link rel="stylesheet" href="/ft_fonts.css">
+
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
-<style>  
-  
-  h1 {
-   font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  header,
-  footer {
-  color: white;
-  background-color: black;
-  }
-  
-  footer {
-    font-size: 10px;
-    text-align: center;
-    margin: 0;
-  }
-  
-</style>  
-  
+
+
+
+<style> 
+
+
+
+h1 {
+
+font-family: 'Roboto', sans-serif;
+
+}
+
+
+
+body {
+
+margin: 0;
+
+}
+
+
+
+header,
+
+footer {
+
+color: white;
+
+background-color: black;
+
+}
+
+
+
+footer {
+
+font-size: 10px;
+
+text-align: center;
+
+margin: 0;
+
+}
+
+
+
+</style> 
+
+
+
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
- <ul class="w3-navbar w3-theme-d2 w3-left-align">
-  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="/index.html" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
-   <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
- </ul>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/work.html">Work</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </div>
+
+<!-- Navbar -->
+
+<div class="ft-top">
+
+<ul class="ft-navbar ft-theme-d2 ft-left-align">
+
+<li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
+
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+
+</li>
+
+<li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+
+<li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li>
+
+<li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li>
+
+<li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li>
+
+<li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li>
+
+</ul>
+
+
+
+<!-- Navbar on small screens -->
+
+<div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium">
+
+<ul class="ft-navbar ft-left-align ft-theme">
+
+<li><a href="/about.html">About</a></li>
+
+<li><a href="/work.html">Work</a></li>
+
+<li><a href="/services.html">Services</a></li>
+
+<li><a href="/contact.html">Contact</a></li>
+
+</ul>
+
 </div>
+
+</div>
+
+
 
 <!-- Contact Container -->
-<div class="w3-row-padding w3-center w3-padding-64" id="contact">
-    <h1>Go ahead, send us a message! We would love to hear from you.</h1> 
-  </div> 
-<div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
-  <div class="w3-row">
-    <div class="w3-col m5">
-      <div class="w3-padding-16"><span class="w3-xlarge w3-border-red w3-bottombar">CONTACT US</span></div><br>
-      <p><i class="fa fa-map-marker w3-text-red w3-xlarge"></i>  3705 NW 115<sup>TH</sup> Ave. Miami, FL  33178</p>
-      <p><i class="fa fa-phone w3-text-red w3-xlarge"></i>  +1 (305) 934-9550</p>
-      <p><i class="fa fa-envelope-o w3-text-red w3-xlarge"></i>  fjtarud@tarud-design.com</p>
-    </div>
-    <div class="w3-col m7">
-      <form class="w3-container w3-card-4 w3-padding-16 w3-white">
-      <div class="w3-group">
-        <label class="w3-label-red w3-left">Name</label>
-        <input class="w3-input" type="text">
-      </div>
-      <div class="w3-group">
-        <label class="w3-label-red w3-left">Email</label>
-        <input class="w3-input" type="text">
-      </div>
-  <div class="w3-group">
-        <label class="w3-label-red w3-left">Message</label>
-        <input class="w3-input" type="text">
-      </div>
-      <input class="w3-check" type="checkbox" unchecked>
-      <label class="w3-validate">Subscribe to mailing list!</label>
-      <button type="button" class="w3-btn w3-right w3-theme">Send</button>
-      </form>
-    </div>
-  </div>
+
+<div class="ft-row-padding ft-center ft-padding-64" id="contact">
+
+<h1>Go ahead, send us a message! We would love to hear from you.</h1> 
+
+</div> 
+
+<div class="ft-container ft-padding-64 ft-theme-l5" id="contact">
+
+<div class="ft-row">
+
+<div class="ft-col m5">
+
+<div class="ft-padding-16"><span class="ft-xlarge ft-border-red ft-bottombar">CONTACT US</span></div><br>
+
+<p><i class="fa fa-map-marker ft-text-red ft-xlarge"></i> 3705 NW 115<sup>TH</sup> Ave. Miami, FL 33178</p>
+
+<p><i class="fa fa-phone ft-text-red ft-xlarge"></i> +1 (305) 934-9550</p>
+
+<p><i class="fa fa-envelope-o ft-text-red ft-xlarge"></i> fjtarud@tarud-design.com</p>
+
 </div>
+
+<div class="ft-col m7">
+
+<form class="ft-container ft-card-4 ft-padding-16 ft-white">
+
+<div class="ft-group">
+
+<label class="ft-label-red ft-left">Name</label>
+
+<input class="ft-input" type="text">
+
+</div>
+
+<div class="ft-group">
+
+<label class="ft-label-red ft-left">Email</label>
+
+<input class="ft-input" type="text">
+
+</div>
+
+<div class="ft-group">
+
+<label class="ft-label-red ft-left">Message</label>
+
+<input class="ft-input" type="text">
+
+</div>
+
+<input class="ft-check" type="checkbox" unchecked>
+
+<label class="ft-validate">Subscribe to mailing list!</label>
+
+<button type="button" class="ft-btn ft-right ft-theme">Send</button>
+
+</form>
+
+</div>
+
+</div>
+
+</div>
+
+
+
 
 
 <!-- Google Maps -->
+
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.8494232481753!2d-80.38597058450229!3d25.808541283615664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9bea399b4d093%3A0x5ea803b71439bd20!2s3705+NW+115th+Ave%2C+Miami%2C+FL+33178!5e0!3m2!1sen!2sus!4v1476303581570" width="100%" height="420px" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-  
+
+
+
+
+
 
 <!-- Footer -->
+
 <footer>
-  <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
-  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
-  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
-  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
-  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
-  <br>
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
+<br>
+
+<a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
+
+<a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
+
+<a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
+
+<a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
+
+<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
+
+<br>
+
+<br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
 </footer>
 
+
+
 <!-- Script For Side Navigation -->
+
 <script>
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
+
+function ft_open() {
+
+var x = document.getElementById("mySidenav");
+
+x.style.width = "300px";
+
+x.style.textAlign = "center";
+
+x.style.fontSize = "40px";
+
+x.style.paddingTop = "10%";
+
+x.style.display = "block";
+
 }
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
+
+function ft_close() {
+
+document.getElementById("mySidenav").style.display = "none";
+
 }
+
 // Used to toggle the menu on smaller screens when clicking on the menu button
+
 function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+
+var x = document.getElementById("navDemo");
+
+if (x.className.indexOf("ft-show") == -1) {
+
+x.className += " ft-show";
+
+} else {
+
+x.className = x.className.replace(" ft-show", "");
+
 }
+
+}
+
 </script>
 
+
+
 </body>
+
 </html>
+
